
    <RelativeLayout android:id="@+id/relativeLayout1" android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:background="@drawable/background">
        <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:text="@string/temperature"></TextView>
        <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:layout_alignBottom="@+id/textView2" android:layout_alignParentRight="true" android:id="@+id/tw_moist" android:text="@string/empty" android:layout_alignTop="@+id/textView2"></TextView>
        <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:layout_alignTop="@+id/textView5" android:layout_alignParentRight="true" android:id="@+id/tw_activity" android:text="@string/empty" android:layout_above="@+id/horizontalScrollView3"></TextView>
        <HorizontalScrollView android:id="@+id/horizontalScrollView1" android:layout_below="@+id/textView1" android:layout_alignParentLeft="true" android:layout_width="match_parent" android:layout_height="70dp">
                <com.ti.lprf.GraphDisplay android:id="@+id/graph_temp" android:layout_width="match_parent" android:layout_height="70dp"></com.ti.lprf.GraphDisplay>
        </HorizontalScrollView>
        <ImageView android:layout_width="wrap_content" android:src="@drawable/tilogo" android:id="@+id/imageView1" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"></ImageView>
        <HorizontalScrollView android:layout_width="match_parent" android:id="@+id/horizontalScrollView3" android:layout_below="@+id/textView5" android:layout_alignParentLeft="true" android:layout_height="70dp">
                <com.ti.lprf.GraphDisplay android:id="@+id/graph_activity" android:layout_height="wrap_content" android:layout_width="wrap_content"></com.ti.lprf.GraphDisplay>
        </HorizontalScrollView>
        <HorizontalScrollView android:layout_width="match_parent" android:id="@+id/horizontalScrollView2" android:layout_alignParentLeft="true" android:layout_below="@+id/textView2" android:layout_height="70dp">
                <com.ti.lprf.GraphDisplay android:id="@+id/graph_moisture" android:layout_width="wrap_content" android:layout_height="match_parent"></com.ti.lprf.GraphDisplay>

        </HorizontalScrollView>
        
        <CheckBox android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_above="@+id/imageView1" android:layout_alignParentLeft="true" android:id="@+id/cb_autoscroll" android:text="@string/autoscroll" android:checked="true"></CheckBox>
        <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_height="wrap_content" android:id="@+id/textView2" android:text="@string/moisture" android:layout_below="@+id/horizontalScrollView1" android:layout_alignParentLeft="true"></TextView>
        <TextView android:layout_width="wrap_content" android:text="@string/empty" android:layout_height="wrap_content" android:id="@+id/tw_temp" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:layout_above="@+id/horizontalScrollView1"></TextView>
        <TextView android:layout_width="wrap_content" android:text="@string/activity" android:layout_height="wrap_content" android:id="@+id/textView5" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_below="@+id/horizontalScrollView2" android:layout_alignParentLeft="true"></TextView>
        <TextView android:id="@+id/textView3" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@+id/horizontalScrollView3" android:layout_alignParentLeft="true" android:text="@string/pressure"></TextView>
        <HorizontalScrollView android:id="@+id/horizontalScrollView4" android:layout_width="wrap_content"  android:layout_below="@+id/textView3" android:layout_alignParentLeft="true" android:layout_height="70dp">
                <com.ti.lprf.GraphDisplay android:id="@+id/graph_pressure" android:layout_width="wrap_content" android:layout_height="match_parent"></com.ti.lprf.GraphDisplay>
        </HorizontalScrollView>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceMedium" android:layout_below="@+id/horizontalScrollView3" android:layout_alignParentRight="true" android:id="@+id/tw_pressure" android:text="@string/empty"></TextView>
    </RelativeLayout>
